[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "distillrepo"
version = "0.2"
description = "Distill Python repositories into compact review bundles for LLMs and structured IR for agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Reddy" },
]
keywords = [
  "llm",
  "agents",
  "code-review",
  "static-analysis",
  "repository-analysis",
  "context-compression",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = { Homepage = "https://github.com/raamana/distillrepo", Repository = "https://github.com/raamana/distillrepo" }
dependencies = [
  "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
analysis = ["jedi", "radon", "vulture"]

[project.scripts]
distillrepo = "distillrepo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/distillrepo"]
exclude = [
  "/src/distillrepo/.distillrepo",
  "/src/distillrepo/distilled.*.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/idea goals and purpose.md",
  "/src/distillrepo/.distillrepo",
  "/src/distillrepo/distilled.*.py",
]
